--- a/requirements.txt
+++ b/requirements.txt
@@ -34,14 +34,16 @@ jsonpatch==1.33 ; python_full_version == "3.12.4"
 jsonpointer==3.0.0 ; python_full_version == "3.12.4"
 jsonschema-specifications==2023.12.1 ; python_full_version == "3.12.4"
 jsonschema==4.23.0 ; python_full_version == "3.12.4"
-langchain-community==0.2.14 ; python_full_version == "3.12.4"
-langchain-core==0.2.36 ; python_full_version == "3.12.4"
+langchain-community==0.2.15 ; python_full_version == "3.12.4"
+langchain-core==0.2.37 ; python_full_version == "3.12.4"
 langchain-openai==0.1.23 ; python_full_version == "3.12.4"
+langchain-pinecone==0.1.3 ; python_full_version == "3.12.4"
 langchain-text-splitters==0.2.2 ; python_full_version == "3.12.4"
 langchain-upstage==0.1.8 ; python_full_version == "3.12.4"
 langchain==0.2.15 ; python_full_version == "3.12.4"
 langsmith==0.1.106 ; python_full_version == "3.12.4"
 lazy-loader==0.4 ; python_full_version == "3.12.4"
+lxml==5.3.0 ; python_full_version == "3.12.4"
 markdown-it-py==3.0.0 ; python_full_version == "3.12.4"
 markupsafe==2.1.5 ; python_full_version == "3.12.4"
 marshmallow==3.22.0 ; python_full_version == "3.12.4"
@@ -71,6 +73,9 @@ orjson==3.10.7 ; python_full_version == "3.12.4"
 packaging==24.1 ; python_full_version == "3.12.4"
 pandas==2.2.2 ; python_full_version == "3.12.4"
 pillow==10.4.0 ; python_full_version == "3.12.4"
+pinecone-client==5.0.1 ; python_full_version == "3.12.4"
+pinecone-plugin-inference==1.0.3 ; python_full_version == "3.12.4"
+pinecone-plugin-interface==0.0.7 ; python_full_version == "3.12.4"
 protobuf==5.28.0 ; python_full_version == "3.12.4"
 pyarrow==17.0.0 ; python_full_version == "3.12.4"
 pyclipper==1.3.0.post5 ; python_full_version == "3.12.4"
@@ -81,6 +86,7 @@ pygments==2.18.0 ; python_full_version == "3.12.4"
 pypdf==4.3.1 ; python_full_version == "3.12.4"
 python-bidi==0.6.0 ; python_full_version == "3.12.4"
 python-dateutil==2.9.0.post0 ; python_full_version == "3.12.4"
+python-docx==1.1.2 ; python_full_version == "3.12.4"
 python-dotenv==1.0.1 ; python_full_version == "3.12.4"
 pytz==2024.1 ; python_full_version == "3.12.4"
 pyyaml==6.0.2 ; python_full_version == "3.12.4"
@@ -105,7 +111,7 @@ tokenizers==0.19.1 ; python_full_version == "3.12.4"
 toml==0.10.2 ; python_full_version == "3.12.4"
 torch==2.4.0+cu124 ; python_full_version == "3.12.4"
 torchaudio==2.4.0+cu124 ; python_full_version == "3.12.4"
-torchvision==0.19.0+cu124 ; python_full_version == "3.12.4"
+torchvision==0.19.0 ; python_full_version == "3.12.4"
 tornado==6.4.1 ; python_full_version == "3.12.4"
 tqdm==4.66.5 ; python_full_version == "3.12.4"
 triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
