--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ torchvision = "^0.19.0"
 langchain-pinecone = "^0.1.3"
 langchain-text-splitters = "^0.2.2"
 python-docx = "^1.1.2"
+langchain-ollama = "^0.1.3"
+langchain-huggingface = "^0.0.3"
 
 
 [[tool.poetry.source]]
