[feat] develop option features

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,18 +30,21 @@ idna==3.8 ; python_full_version == "3.12.4"
 imageio==2.35.1 ; python_full_version == "3.12.4"
 jinja2==3.1.4 ; python_full_version == "3.12.4"
 jiter==0.5.0 ; python_full_version == "3.12.4"
+joblib==1.4.2 ; python_full_version == "3.12.4"
 jsonpatch==1.33 ; python_full_version == "3.12.4"
 jsonpointer==3.0.0 ; python_full_version == "3.12.4"
 jsonschema-specifications==2023.12.1 ; python_full_version == "3.12.4"
 jsonschema==4.23.0 ; python_full_version == "3.12.4"
-langchain-community==0.2.15 ; python_full_version == "3.12.4"
-langchain-core==0.2.37 ; python_full_version == "3.12.4"
+langchain-community==0.2.14 ; python_full_version == "3.12.4"
+langchain-core==0.2.36 ; python_full_version == "3.12.4"
+langchain-huggingface==0.0.3 ; python_full_version == "3.12.4"
+langchain-ollama==0.1.3 ; python_full_version == "3.12.4"
 langchain-openai==0.1.23 ; python_full_version == "3.12.4"
 langchain-pinecone==0.1.3 ; python_full_version == "3.12.4"
 langchain-text-splitters==0.2.2 ; python_full_version == "3.12.4"
 langchain-upstage==0.1.8 ; python_full_version == "3.12.4"
 langchain==0.2.15 ; python_full_version == "3.12.4"
-langsmith==0.1.106 ; python_full_version == "3.12.4"
+langsmith==0.1.107 ; python_full_version == "3.12.4"
 lazy-loader==0.4 ; python_full_version == "3.12.4"
 lxml==5.3.0 ; python_full_version == "3.12.4"
 markdown-it-py==3.0.0 ; python_full_version == "3.12.4"
@@ -67,7 +70,8 @@ nvidia-cusparse-cu12==12.3.0.142 ; platform_system == "Linux" and platform_machi
 nvidia-nccl-cu12==2.20.5 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
 nvidia-nvjitlink-cu12==12.4.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
 nvidia-nvtx-cu12==12.4.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
-openai==1.42.0 ; python_full_version == "3.12.4"
+ollama==0.3.2 ; python_full_version == "3.12.4"
+openai==1.43.0 ; python_full_version == "3.12.4"
 opencv-python-headless==4.10.0.84 ; python_full_version == "3.12.4"
 orjson==3.10.7 ; python_full_version == "3.12.4"
 packaging==24.1 ; python_full_version == "3.12.4"
@@ -84,6 +88,7 @@ pydantic==2.8.2 ; python_full_version == "3.12.4"
 pydeck==0.9.1 ; python_full_version == "3.12.4"
 pygments==2.18.0 ; python_full_version == "3.12.4"
 pypdf==4.3.1 ; python_full_version == "3.12.4"
+pyperclip==1.9.0 ; python_full_version == "3.12.4"
 python-bidi==0.6.0 ; python_full_version == "3.12.4"
 python-dateutil==2.9.0.post0 ; python_full_version == "3.12.4"
 python-docx==1.1.2 ; python_full_version == "3.12.4"
@@ -95,25 +100,31 @@ regex==2024.7.24 ; python_full_version == "3.12.4"
 requests==2.32.3 ; python_full_version == "3.12.4"
 rich==13.8.0 ; python_full_version == "3.12.4"
 rpds-py==0.20.0 ; python_full_version == "3.12.4"
+safetensors==0.4.4 ; python_full_version == "3.12.4"
 scikit-image==0.24.0 ; python_full_version == "3.12.4"
+scikit-learn==1.5.1 ; python_full_version == "3.12.4"
 scipy==1.14.1 ; python_full_version == "3.12.4"
+sentence-transformers==3.0.1 ; python_full_version == "3.12.4"
 shapely==2.0.6 ; python_full_version == "3.12.4"
 six==1.16.0 ; python_full_version == "3.12.4"
 smmap==5.0.1 ; python_full_version == "3.12.4"
 sniffio==1.3.1 ; python_full_version == "3.12.4"
 sqlalchemy==2.0.32 ; python_full_version == "3.12.4"
+st-copy-to-clipboard==0.1.6 ; python_full_version == "3.12.4"
 streamlit==1.38.0 ; python_full_version == "3.12.4"
 sympy==1.13.2 ; python_full_version == "3.12.4"
 tenacity==8.5.0 ; python_full_version == "3.12.4"
+threadpoolctl==3.5.0 ; python_full_version == "3.12.4"
 tifffile==2024.8.28 ; python_full_version == "3.12.4"
 tiktoken==0.7.0 ; python_full_version == "3.12.4"
 tokenizers==0.19.1 ; python_full_version == "3.12.4"
 toml==0.10.2 ; python_full_version == "3.12.4"
 torch==2.4.0+cu124 ; python_full_version == "3.12.4"
 torchaudio==2.4.0+cu124 ; python_full_version == "3.12.4"
-torchvision==0.19.0 ; python_full_version == "3.12.4"
+torchvision==0.19.0+cu124 ; python_full_version == "3.12.4"
 tornado==6.4.1 ; python_full_version == "3.12.4"
 tqdm==4.66.5 ; python_full_version == "3.12.4"
+transformers==4.44.2 ; python_full_version == "3.12.4"
 triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
 typing-extensions==4.12.2 ; python_full_version == "3.12.4"
 typing-inspect==0.9.0 ; python_full_version == "3.12.4"
