--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ langchain-text-splitters = "^0.2.2"
 python-docx = "^1.1.2"
 langchain-ollama = "^0.1.3"
 langchain-huggingface = "^0.0.3"
+pyperclip = "^1.9.0"
+st-copy-to-clipboard = "^0.1.6"
 
 
 [[tool.poetry.source]]
