--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ langchain-ollama = "^0.1.3"
 langchain-huggingface = "^0.0.3"
 pyperclip = "^1.9.0"
 st-copy-to-clipboard = "^0.1.6"
+protobuf = "5.27.0"
+semantic-chunkers = "^0.0.9"
 
 
 [[tool.poetry.source]]
