--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,19 @@ annotated-types==0.7.0 ; python_full_version == "3.12.4"
 anyio==4.4.0 ; python_full_version == "3.12.4"
 attrs==24.2.0 ; python_full_version == "3.12.4"
 blinker==1.8.2 ; python_full_version == "3.12.4"
+boto3==1.35.15 ; python_full_version == "3.12.4"
+botocore==1.35.15 ; python_full_version == "3.12.4"
 cachetools==5.5.0 ; python_full_version == "3.12.4"
 certifi==2024.7.4 ; python_full_version == "3.12.4"
 charset-normalizer==3.3.2 ; python_full_version == "3.12.4"
 click==8.1.7 ; python_full_version == "3.12.4"
-colorama==0.4.6 ; python_full_version == "3.12.4" and platform_system == "Windows"
+cohere==5.9.1 ; python_full_version == "3.12.4"
+colorama==0.4.6 ; python_full_version == "3.12.4"
+colorlog==6.8.2 ; python_full_version == "3.12.4"
 dataclasses-json==0.6.7 ; python_full_version == "3.12.4"
 distro==1.9.0 ; python_full_version == "3.12.4"
 easyocr==1.7.1 ; python_full_version == "3.12.4"
+fastavro==1.9.7 ; python_full_version == "3.12.4"
 filelock==3.15.4 ; python_full_version == "3.12.4"
 frozenlist==1.4.1 ; python_full_version == "3.12.4"
 fsspec==2024.6.1 ; python_full_version == "3.12.4"
@@ -24,12 +29,14 @@ gitpython==3.1.43 ; python_full_version == "3.12.4"
 greenlet==3.0.3 ; python_full_version == "3.12.4" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32")
 h11==0.14.0 ; python_full_version == "3.12.4"
 httpcore==1.0.5 ; python_full_version == "3.12.4"
+httpx-sse==0.4.0 ; python_full_version == "3.12.4"
 httpx==0.27.2 ; python_full_version == "3.12.4"
 huggingface-hub==0.24.6 ; python_full_version == "3.12.4"
 idna==3.8 ; python_full_version == "3.12.4"
 imageio==2.35.1 ; python_full_version == "3.12.4"
 jinja2==3.1.4 ; python_full_version == "3.12.4"
 jiter==0.5.0 ; python_full_version == "3.12.4"
+jmespath==1.0.1 ; python_full_version == "3.12.4"
 joblib==1.4.2 ; python_full_version == "3.12.4"
 jsonpatch==1.33 ; python_full_version == "3.12.4"
 jsonpointer==3.0.0 ; python_full_version == "3.12.4"
@@ -76,11 +83,12 @@ opencv-python-headless==4.10.0.84 ; python_full_version == "3.12.4"
 orjson==3.10.7 ; python_full_version == "3.12.4"
 packaging==24.1 ; python_full_version == "3.12.4"
 pandas==2.2.2 ; python_full_version == "3.12.4"
+parameterized==0.9.0 ; python_full_version == "3.12.4"
 pillow==10.4.0 ; python_full_version == "3.12.4"
 pinecone-client==5.0.1 ; python_full_version == "3.12.4"
 pinecone-plugin-inference==1.0.3 ; python_full_version == "3.12.4"
 pinecone-plugin-interface==0.0.7 ; python_full_version == "3.12.4"
-protobuf==5.28.0 ; python_full_version == "3.12.4"
+protobuf==5.27.0 ; python_full_version == "3.12.4"
 pyarrow==17.0.0 ; python_full_version == "3.12.4"
 pyclipper==1.3.0.post5 ; python_full_version == "3.12.4"
 pydantic-core==2.20.1 ; python_full_version == "3.12.4"
@@ -96,14 +104,18 @@ python-dotenv==1.0.1 ; python_full_version == "3.12.4"
 pytz==2024.1 ; python_full_version == "3.12.4"
 pyyaml==6.0.2 ; python_full_version == "3.12.4"
 referencing==0.35.1 ; python_full_version == "3.12.4"
-regex==2024.7.24 ; python_full_version == "3.12.4"
+regex==2023.12.25 ; python_full_version == "3.12.4"
+requests-mock==1.12.1 ; python_full_version == "3.12.4"
 requests==2.32.3 ; python_full_version == "3.12.4"
 rich==13.8.0 ; python_full_version == "3.12.4"
 rpds-py==0.20.0 ; python_full_version == "3.12.4"
+s3transfer==0.10.2 ; python_full_version == "3.12.4"
 safetensors==0.4.4 ; python_full_version == "3.12.4"
 scikit-image==0.24.0 ; python_full_version == "3.12.4"
 scikit-learn==1.5.1 ; python_full_version == "3.12.4"
 scipy==1.14.1 ; python_full_version == "3.12.4"
+semantic-chunkers==0.0.9 ; python_full_version == "3.12.4"
+semantic-router==0.0.65 ; python_full_version == "3.12.4"
 sentence-transformers==3.0.1 ; python_full_version == "3.12.4"
 shapely==2.0.6 ; python_full_version == "3.12.4"
 six==1.16.0 ; python_full_version == "3.12.4"
@@ -126,6 +138,7 @@ tornado==6.4.1 ; python_full_version == "3.12.4"
 tqdm==4.66.5 ; python_full_version == "3.12.4"
 transformers==4.44.2 ; python_full_version == "3.12.4"
 triton==3.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version == "3.12.4"
+types-requests==2.32.0.20240907 ; python_full_version == "3.12.4"
 typing-extensions==4.12.2 ; python_full_version == "3.12.4"
 typing-inspect==0.9.0 ; python_full_version == "3.12.4"
 tzdata==2024.1 ; python_full_version == "3.12.4"
