--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,13 @@ torchvision = "^0.19.0"
 langchain-pinecone = "^0.1.3"
 langchain-text-splitters = "^0.2.2"
 python-docx = "^1.1.2"
-langchain-ollama = "^0.1.3"
-langchain-huggingface = "^0.0.3"
 pyperclip = "^1.9.0"
 st-copy-to-clipboard = "^0.1.6"
 protobuf = "5.27.0"
 semantic-chunkers = "^0.0.9"
 crawl4ai = {extras = ["all"], version = "^0.3.6"}
 googletrans-py = "^4.0.0"
+langgraph = ">0.2.27"
 
 
 [[tool.poetry.source]]
