--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,9 @@ readme = "README.md"
 python = "3.12.4"
 python-dotenv = "^1.0.1"
 streamlit = "^1.38.0"
-torch = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}
-torchaudio = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}
 easyocr = "^1.7.1"
 langchain-upstage = "^0.1.8"
 langchain-community = "^0.2.14"
-torchvision = "^0.19.0"
 langchain-pinecone = "^0.1.3"
 langchain-text-splitters = "^0.2.2"
 python-docx = "^1.1.2"
@@ -26,6 +23,7 @@ semantic-chunkers = "^0.0.9"
 crawl4ai = {extras = ["all"], version = "^0.3.6"}
 googletrans-py = "^4.0.0"
 langgraph = ">0.2.27"
+opencv-python = "^4.10.0.84"
 
 
 [[tool.poetry.source]]
