--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,13 @@ langchain-pinecone = "^0.1.3"
 langchain-text-splitters = "^0.2.2"
 python-docx = "^1.1.2"
 pyperclip = "^1.9.0"
-st-copy-to-clipboard = "^0.1.6"
 protobuf = "5.27.0"
 semantic-chunkers = "^0.0.9"
 crawl4ai = {extras = ["all"], version = "^0.3.6"}
 googletrans-py = "^4.0.0"
 langgraph = ">0.2.27"
 opencv-python = "^4.10.0.84"
+fsspec = "2024.3.1"
 
 
 [[tool.poetry.source]]
